# awstools

./: .env.example  README.md  pyproject.toml
awstools/: dynamodb.py  s3.py  sqs.py
